--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <span class="shape3"></span>
         </div>
         <a href="/">
-            <img class="header-logo-image" src="images/svg/noemi-logo.svg" alt="noemi logo">
+            <img class="header-logo-image" src="svg/noemi-logo.svg" alt="noemi logo">
         </a>
         <h1 class="title header-title">Блог о творчестве, спорте, и образе жизни</h1>
     </header>
