--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             </ul>
                             <a href="#0">
                                 <h3 class="tr-title">
-                                    Сейчас в тренде: сад <br>
+                                    Сейчас в тренде: сад
                                     на подоконнике
                                 </h3>
                             </a>
