--- a/index.html
+++ b/index.html
@@ -95,5 +95,8 @@
     </div>
     <footer class="footer"></footer>
 </div>
+<div class="desk">
+    <h1>Доступна только мобильная версия. Пожалуйста, зайдите с телефона</h1>    
+</div>
 </body>
 </html>
