--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <footer class="footer"></footer>
 </div>
 <div class="desk">
-    <h1>Пожалуйста, зайдите с телефона. ПК версион каминг сун... </h1>    
+    <h1>Пожалуйста, зайдите с телефона. <br> ПК версион каминг сун... </h1>    
 </div>
 </body>
 </html>
