--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
     </footer>
     <div class="feedback">
         <form class="fb-form">
-            <h2 class="fb-title">Ваш фидбек</h2>
+            <h4 class="fb-title section-title">Ваш фидбек</h4>
             <label class="fb-select">
                 <p>Как часто вы заходите на сайт?</p>
                 <select class="fb-select-items">
