--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </div>
                     <p class="article-text">
                         Итак, вы в Питере. Раннее утро. Лед с рек и каналов уже ушел, запущены фонтаны города… Музеи еще
-                        закрыты. Что посмотреть? lorem100
+                        закрыты. Что посмотреть? 
                     </p>
                 </div>
             </article>
