--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css">
     <title>Mobile diplom</title>
@@ -114,7 +112,7 @@
                     </div>
                     <p class="article-text">
                         Итак, вы в Питере. Раннее утро. Лед с рек и каналов уже ушел, запущены фонтаны города… Музеи еще
-                        закрыты. Что посмотреть? 
+                        закрыты. Что посмотреть? lorem100
                     </p>
                 </div>
             </article>
@@ -293,7 +291,7 @@
             </section>
             <section class="section-main-style follow-section">
                 <h4 class="title section-title">Рассылка</h4>
-                <form action="" class="follow-form">
+                <form action="/" class="follow-form">
                     <label class="input-label-mail">
                         <span class="label-text visually-hidden">Рассылка новостей</span>
                         <input type="email" class="input-label-area" placeholder="Ваш email-адрес">
@@ -424,7 +422,7 @@
         <form class="fb-form">
             <h4 class="fb-title section-title">Ваш фидбек</h4>
             <label class="fb-select">
-                <p>Как часто вы заходите на сайт?</p>
+                <span>Как часто вы заходите на сайт?</span>
                 <select class="fb-select-items">
                     <option class="select-item" value="Почти каждый день">Почти каждый день</option>
                     <option class="select-item" value="Раз в несколько дней">Раз в несколько дней</option>
@@ -432,7 +430,7 @@
                     <option class="select-item" value="Несколько раз в год">Несколько раз в год</option>
                 </select>
             </label>
-            <p>Вы подписаны на e-mail-рассылку?</p>
+            <span>Вы подписаны на e-mail-рассылку?</span>
             <div class="follow-radio">
                 <input class="done-radio" type="radio" id="yes" value="да">
                 <label class="done-radio-label" for="yes">Да</label>
@@ -440,11 +438,11 @@
                 <label class="done-radio-label" for="no">Нет</label>
             </div>
             <label class="fb-textField" for="message">
-                <p>Расскажите, какой контент вы хотели бы видеть на нашем сайте?</p>
+                <span>Расскажите, какой контент вы хотели бы видеть на нашем сайте?</span>
                 <textarea id="message" placeholder="Может, больше рецептов?"></textarea>
             </label>
-            <input type="submit" class="fb-submit"/>
-            <button type="button" onclick="closeFeedback()" class="fb-close"></button>
+            <button class="fb-submit">Отправить</button>
+            <button onclick="closeFeedback()" class="fb-close"></button>
         </form>
     </div>
     <div class="openFeedback">
