--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
     <link rel="stylesheet" href="css/main.css">
     <title>Mobile diplom</title>
 </head>
@@ -281,6 +281,7 @@
                 </article>
             </section>
             <section class="section-main-style search-section">
+                <h4 class="title section-title" hidden>Поиск</h4>
                 <form action="/" class="search-form">
                     <label class="input-label-search">
                         <span class="label-text visually-hidden" hidden>Поиск по сайту</span>
