--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 </article>
             </section>
             <section class="section-main-style search-section">
-                <h4 class="title section-title" hidden>Поиск</h4>
+                <h4 class="title section-title visually-hidden">Поиск</h4>
                 <form action="/" class="search-form">
                     <label class="input-label-search">
                         <span class="label-text visually-hidden" hidden>Поиск по сайту</span>
